[tool.poetry]
name = "runsignup-api"
version = "0.1.0"
description = ""
authors = ["Josh McVey"]
license = "Apache"
readme = "README.md"
packages = [{include = "runsignup_api"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
gracy = "^1.19.0"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.274"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["files"]
src = ["*.py", "automation", "tests"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.per-file-ignores]


[tool.mypy]
strict = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
exclude = "__init__.py"
